[package]
authors = ["Yudai Hayashi <yudai0913haya@gmail.com>"]
edition = "2018"
name = "pykk"
version = "0.1.2"
readme = "README.md"
homepage = "http://github.com/Hayashi-Yudai/pykk"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "pykk"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.13.2"

[dependencies]
