[package]
authors = ["Yudai Hayashi <yudai0913haya@gmail.com>"]
description = "The fast Kramers-Kronig transform"
edition = "2018"
readme = "README.md"
homepage = "http://github.com/Hayashi-Yudai/pykk"
license = "Apache-2.0"
name = "pykk"
version = "0.1.4"

[lib]
crate-type = ["cdylib"]
name = "pykk"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.13.2"

[dependencies]
