[package]
authors = ["Yudai Hayashi <yudai0913haya@gmail.com>"]
description = "The fast Kramers-Kronig transform"
edition = "2021"
readme = "README.md"
homepage = "http://github.com/Hayashi-Yudai/pykk"
license = "Apache-2.0"
name = "pykk"
version = "0.1.5"

[lib]
crate-type = ["cdylib"]
name = "pykk"

[dependencies]
pyo3 = { version = "0.23.1", features = [
    "extension-module",
    "generate-import-lib",
] }
